Add split functionality